force-app/main/default/objects/J2_ISP_ToolCustomSetting__c/J2_ISP_ToolCustomSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting for ISP CS TOOL</description>
    <label>J2_ISP_ToolCustomSetting</label>
</CustomObject>