force-app/main/default/objects/J2_ISP_ToolCustomSetting__c/fields/J2_FaxForce_Environment__c.field-meta.xml
<CustomField>
    <fullName>J2_FaxForce_Environment__c</fullName>
    <description>To store environment, like Production, qa, development.</description>
    <label>J2_FaxForce_Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>