force-app/main/default/objects/J2_ISP_ToolCustomSetting__c/fields/J2_ISP_ApiEndpoint__c.field-meta.xml
<CustomField>
    <fullName>J2_ISP_ApiEndpoint__c</fullName>
    <label>J2_ISP_ApiEndpoint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>