force-app/main/default/objects/J2_ISP_ToolCustomSetting__c/fields/J2_ISP_ATFSendpoint__c.field-meta.xml
<CustomField>
    <fullName>J2_ISP_ATFSendpoint__c</fullName>
    <label>J2_ISP_ATFSendpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>