force-app/main/default/objects/J2_ISP_ToolCustomSetting__c/fields/J2_ISP_sfdctabname__c.field-meta.xml
<CustomField>
    <fullName>J2_ISP_sfdctabname__c</fullName>
    <description>ISP CS TOOL tab&apos;s &quot;id&quot;</description>
    <label>J2_ISP_sfdctabname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>